add data and create bar chart

--- a/project01/prototype/index.html
+++ b/project01/prototype/index.html
@@ -6,31 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How cats and dogs live in museums/galleries</title>
     <link rel="stylesheet" href="https://use.typekit.net/lcn3jpe.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 
 <body>
     <h1>How cats and dogs live in museums/galleries</h1>
+    <script src="bar.js"></script>
+    <!-- <script src="bubble.js"></script> -->
 
 </body>
-
-<style>
-    body {
-        background-color: var(--cream, #FFF9F0);
-        margin: 0;
-        padding: 0;
-    }
-
-    H1 {
-        font-family: "spirits-soft", serif;
-        font-size: 60px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 100%;
-        margin: 0;
-        text-transform: uppercase;
-        color: var(--brown, #3E3A36);
-    }
-</style>
 
 </html>
