--- a/project01/prototype/index.html
+++ b/project01/prototype/index.html
@@ -12,8 +12,9 @@
 
 <body>
     <h1>How cats and dogs live in museums/galleries</h1>
-    <script src="bar.js"></script>
-    <!-- <script src="bubble.js"></script> -->
+    <p>From Art & Design Collection Smithsonian</p>
+    <!-- <script src="chart.js"></script> -->
+    <script src="bubble_art.js"></script>
 
 </body>
 
