--- a/project01/prototype/index.html
+++ b/project01/prototype/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How cats and dogs live in art/design museums</title>
+    <title>How cats & dogs live in art/design museums?</title>
     <link rel="stylesheet" href="https://use.typekit.net/lcn3jpe.css">
     <link rel="stylesheet" href="styles.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
@@ -13,40 +13,46 @@
 <body>
     <header>
         <div id="title">
-            <h1>How cats and dogs <br>live in art/design museums</h1>
+            <h1>How cats<img class="gif" src="assets/cats.gif" alt="">
+                & dogs<img class="gif" src="assets/dogs.gif" alt=""><br>
+                live in art/design museums?</h1>
         </div>
         <div id="info">
-            <div id="legend">Legend
+            <!-- Old legend -->
+            <!-- <div id="legend">Legend
                 <div class="legend-item">
-                    <svg width="20" height="20">
+                     <svg width="20" height="20">
                         <rect width="18" height="18" x="0" y="0" fill="#48C0DA" />
                     </svg>
                     <div class="legend-text">337 Cats</div>
                 </div>
 
                 <div class="legend-item">
-                    <svg height="20" width="20">
+                   <svg height="20" width="20">
                         <circle r="10" cx="10" cy="10" fill="#FF603D" />
                     </svg>
                     <div class="legend-text">829 Dogs</div>
                 </div>
 
-            </div>
+            </div> -->
 
             <div id="top5">
-                <a>Found them the most in this type </a>
+                <a>Found them the most in these types</a>
                 <!-- Top5 cats -->
-                <img src="assets/cat_top.svg" alt="top 5 cat types">
+                <label>🐱 - All cats 337 </label>
+                <img src="assets/cat_top.svg" alt="top 5 cats types">
                 <!-- Top5 dogs -->
-                <img src="assets/dog_top.svg" alt="top 5 dog types">
+                <br>
+                <label>🐶 - All dogs 829 </label>
+                <img src="assets/dog_top.svg" alt="top 5 dogs types">
             </div>
         </div>
     </header>
 
     <div class="container">
         <div id="description">
-            <p>This project explores keywords “Cat” and “Dog” from art & design category of Smithsonian museums
-                including. It includesthe Smithsonian American Art Museum, National Museum of African Art, National
+            <p>This project explores keywords “Cat” and “Dog” from art & design category of Smithsonian museums. It
+                includes the Smithsonian American Art Museum, National Museum of African Art, National
                 Portrait Gallery, Cooper
                 Hewitt Smithsonian Design Museum, Freer Gallery of Art and Arthur M. Sackler Gallery, and Hirshhorn
                 Museum and Sculpture Garden, resulting in a total of 1,166 records and group by object type. </p>
@@ -61,14 +67,14 @@
 
     <div id="chart">
         <!-- <script src="chart.js"></script> -->
-        <script src="bubble_unit.js"></script>
+        <script src="bubble_emoji.js"></script>
     </div>
 
     <footer>
 
         <a href="https://github.com/monsichasris/major-studio-1/tree/main/project01/prototype">Github↗</a>
 
-        <label>2024 © Monsicha Srisuantang, MS Data visualization, Parsons school of design</label>
+        <label>2024 © Monsicha Srisuantang | MS Data visualization, Parsons school of design</label>
 
     </footer>
 
