--- a/project01/prototype/index.html
+++ b/project01/prototype/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How cats & dogs live in art/design museums?</title>
+    <title>Cats & Dogs in the Museums</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.png">
     <link rel="stylesheet" href="https://use.typekit.net/lcn3jpe.css">
     <link rel="stylesheet" href="styles.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
@@ -33,7 +34,6 @@
                     </svg>
                     <div class="legend-text">829 Dogs</div>
                 </div>
-
             </div> -->
 
             <div id="top5">
@@ -56,14 +56,10 @@
                 Portrait Gallery, Cooper
                 Hewitt Smithsonian Design Museum, Freer Gallery of Art and Arthur M. Sackler Gallery, and Hirshhorn
                 Museum and Sculpture Garden, resulting in a total of 1,166 records and group by object type. </p>
-
-
         </div>
-
     </div>
 
     <label id="guide">👆🏼 Click on the bubble to see the details</label>
-
 
     <div id="chart">
         <!-- <script src="chart.js"></script> -->
@@ -71,11 +67,8 @@
     </div>
 
     <footer>
-
         <a href="https://github.com/monsichasris/major-studio-1/tree/main/project01/prototype">Github↗</a>
-
         <label>2024 © Monsicha Srisuantang | MS Data visualization, Parsons school of design</label>
-
     </footer>
 
 </body>
