--- a/project01/draft/index.html
+++ b/project01/draft/index.html
@@ -18,7 +18,24 @@
                 & dogs<img class="gif" src="assets/dogs.gif" alt=""><br>
                 live in art/design museums?</h1>
         </div>
-        
+        <div id="info">
+            <!-- Old legend -->
+            <!-- <div id="legend">Legend
+                <div class="legend-item">
+                     <svg width="20" height="20">
+                        <rect width="18" height="18" x="0" y="0" fill="#48C0DA" />
+                    </svg>
+                    <div class="legend-text">337 Cats</div>
+                </div>
+
+                <div class="legend-item">
+                   <svg height="20" width="20">
+                        <circle r="10" cx="10" cy="10" fill="#FF603D" />
+                    </svg>
+                    <div class="legend-text">829 Dogs</div>
+                </div>
+            </div> -->
+
             <div id="top5">
                 <a>Found them the most in these types</a>
                 <!-- Top5 cats -->
@@ -29,7 +46,7 @@
                 <label>🐶 - All dogs 829 </label>
                 <img src="assets/dog_top.svg" alt="top 5 dogs types">
             </div>
-
+        </div>
     </header>
 
     <div class="container">
@@ -46,7 +63,7 @@
 
     <div id="chart">
         <!-- <script src="chart.js"></script> -->
-        <script src="chart.js"></script>
+        <script src="bubble_emoji.js"></script>
     </div>
 
     <footer>
