update image in header

--- a/project01/prototype/index.html
+++ b/project01/prototype/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cats & Dogs in the Museums</title>
+    <title>Cats & Dogs in Museums</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.png">
     <link rel="stylesheet" href="https://use.typekit.net/lcn3jpe.css">
     <link rel="stylesheet" href="styles.css">
@@ -18,17 +18,17 @@
                 & dogs<img class="gif" src="assets/dogs.gif" alt=""><br>
                 live in art/design museums?</h1>
         </div>
-        
-            <div id="top5">
-                <a>Found them the most in these types</a>
-                <!-- Top5 cats -->
-                <label>🐱 - All cats 337 </label>
-                <img src="assets/cat_top.svg" alt="top 5 cats types">
-                <!-- Top5 dogs -->
-                <br>
-                <label>🐶 - All dogs 829 </label>
-                <img src="assets/dog_top.svg" alt="top 5 dogs types">
-            </div>
+
+        <div id="top5">
+            <a>Found them the most in these types</a>
+            <!-- Top5 cats -->
+            <label>🐱 - All cats 337 </label>
+            <img src="assets/cat_top.svg" alt="top 5 cats types">
+            <!-- Top5 dogs -->
+            <br>
+            <label>🐶 - All dogs 829 </label>
+            <img src="assets/dog_top.svg" alt="top 5 dogs types">
+        </div>
 
     </header>
 
