--- a/project02/index.html
+++ b/project02/index.html
@@ -5,10 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>NPG</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.png">
+        <link rel="stylesheet" href="https://use.typekit.net/lcn3jpe.css">
         <link rel="stylesheet" href="styles.css">
         <script src="https://d3js.org/d3.v7.min.js"></script>
     </head>
 <body>
-    
+    <h1>Gender career trends behind the sitter in NPG</h1>
 </body>
 </html>
