--- a/project02/index.html
+++ b/project02/index.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>NPG</title>
 
-
         <link rel="stylesheet" href="styles.css">
         <script src="https://d3js.org/d3.v7.min.js"></script>
         <script src="main.js"></script>
@@ -14,5 +13,7 @@
     </head>
 <body>
     <h1>Gender career trends behind the sitter in NPG</h1>
+    <p>Explore the “careers” of the sitters featured in the Smithsonian National Portrait Gallery,
+        categorized by gender over time. It draws from a dataset of 14,490 documents.</p>
 </body>
 </html>
