add landing title

--- a/project02/index.html
+++ b/project02/index.html
@@ -45,4 +45,9 @@
         <label>Major Studio 1 Fall 24 | MS Data Visualization, Parsons School of Design</label>
     </footer>
 </body>
+
+<footer>
+    <label>2024 © Monsicha Srisuantang & Harshita Chakravadhanula</label>
+    <label>Major Studio 1 Fall 24 | MS Data Visualization, Parsons School of Design</label>
+</footer>
 </html>
