add landing title

--- a/project02/index.html
+++ b/project02/index.html
@@ -11,8 +11,31 @@
         <script src="main.js"></script>
     </head>
 <body>
-    <h1>Gender career trends of the sitters in NPG</h1>
+    <header>
+    <div class="title-gif">
+        <img src="/assets/women.gif">
+        <img src="/assets/women.gif">
+        <img src="/assets/women.gif">
+    </div>
+
+    <div class="title">
+    <h1>Gender career trends behind the sitter in NPG</h1>
     <p>Explore the “careers” of the sitters featured in the Smithsonian National Portrait Gallery,
         categorized by gender over time. It draws from a dataset of 14,490 documents.</p>
+    </div>
+
+    <div class="title-gif">
+        <img src="/assets/men.gif">
+        <img src="/assets/men.gif">
+        <img src="/assets/men.gif">
+    </div>
+
+    </header>
+    <div id="chart"></div>
 </body>
+
+<footer>
+    <label>2024 © Monsicha Srisuantang & Harshita Chakravadhanula</label>
+    <label>Major Studio 1 Fall 24 | MS Data Visualization, Parsons School of Design</label>
+</footer>
 </html>
