--- a/project02/index.html
+++ b/project02/index.html
@@ -19,8 +19,8 @@
     </div>
 
     <div class="title">
-    <h1>Gender career trends of the sitters in NPG</h1>
-    <p>Explore the “careers” of the sitters featured in the Smithsonian National Portrait Gallery,
+    <h1>Gender role trends of the sitters in NPG</h1>
+    <p>Explore the roles of the sitters featured in the Smithsonian National Portrait Gallery,
         categorized by gender over time. It draws from a dataset of 14,490 documents.</p>
     </div>
 
