adjust landing section

--- a/project02/index.html
+++ b/project02/index.html
@@ -13,24 +13,26 @@
 <body>
     <header>
     <div class="title-gif">
-        <img src="/assets/women.gif">
-        <img src="/assets/women.gif">
-        <img src="/assets/women.gif">
+        <img src="/assets/women.gif" class="img-gif">
+        <img src="/assets/women.gif" class="img-gif">
+        <img src="/assets/women.gif" class="img-gif">
     </div>
 
     <div class="title">
     <h1>Gender career trends of the sitters in NPG</h1>
     <p>Explore the “careers” of the sitters featured in the Smithsonian National Portrait Gallery,
         categorized by gender over time. It draws from a dataset of 14,490 documents.</p>
+        <p>↓</p>
     </div>
 
     <div class="title-gif">
-        <img src="/assets/men.gif">
-        <img src="/assets/men.gif">
-        <img src="/assets/men.gif">
+        <img src="/assets/men.gif" class="img-gif">
+        <img src="/assets/men.gif" class="img-gif">
+        <img src="/assets/men.gif" class="img-gif">
     </div>
 
     </header>
+    <div id="filter"></div>
     <div id="chart"></div>
 </body>
 
