Update gif in index.html

--- a/project02/index.html
+++ b/project02/index.html
@@ -13,9 +13,9 @@
 <body>
     <header>
     <div class="title-gif">
-        <img src="/assets/women.gif" class="img-gif">
-        <img src="/assets/women.gif" class="img-gif">
-        <img src="/assets/women.gif" class="img-gif">
+        <img src="assets/women.gif" class="img-gif">
+        <img src="assets/women.gif" class="img-gif">
+        <img src="assets/women.gif" class="img-gif">
     </div>
 
     <div class="title">
@@ -26,9 +26,9 @@
     </div>
 
     <div class="title-gif">
-        <img src="/assets/men.gif" class="img-gif">
-        <img src="/assets/men.gif" class="img-gif">
-        <img src="/assets/men.gif" class="img-gif">
+        <img src="assets/men.gif" class="img-gif">
+        <img src="assets/men.gif" class="img-gif">
+        <img src="assets/men.gif" class="img-gif">
     </div>
 
     </header>
