--- a/project02/index.html
+++ b/project02/index.html
@@ -11,31 +11,33 @@
         <script src="main.js"></script>
     </head>
 <body>
-    <header>
-    <div class="title-gif">
-        <img src="/assets/women.gif">
-        <img src="/assets/women.gif">
-        <img src="/assets/women.gif">
-    </div>
+    <div class="content-wrapper"> <!-- New wrapper for content -->
+        <header>
+            <div class="title-gif">
+                <img src="/assets/women.gif">
+                <img src="/assets/women.gif">
+                <img src="/assets/women.gif">
+            </div>
 
-    <div class="title">
-    <h1>Gender role trends of the sitters in NPG</h1>
-    <p>Explore the roles of the sitters featured in the Smithsonian National Portrait Gallery,
-        categorized by gender over time. It draws from a dataset of 14,490 documents.</p>
-    </div>
+            <div class="title">
+                <h1>Gender role trends of the sitters in NPG</h1>
+                <p>Explore the roles of the sitters featured in the Smithsonian National Portrait Gallery,
+                    categorized by gender over time. It draws from a dataset of 14,490 documents.</p>
+            </div>
 
-    <div class="title-gif">
-        <img src="/assets/men.gif">
-        <img src="/assets/men.gif">
-        <img src="/assets/men.gif">
+            <div class="title-gif">
+                <img src="/assets/men.gif">
+                <img src="/assets/men.gif">
+                <img src="/assets/men.gif">
+            </div>
+        </header>
+        
+        <div id="chart"></div>
     </div>
-
-    </header>
-    <div id="chart"></div>
+    
+    <footer>
+        <label>2024 © Monsicha Srisuantang & Harshita Chakravadhanula</label>
+        <label>Major Studio 1 Fall 24 | MS Data Visualization, Parsons School of Design</label>
+    </footer>
 </body>
-
-<footer>
-    <label>2024 © Monsicha Srisuantang & Harshita Chakravadhanula</label>
-    <label>Major Studio 1 Fall 24 | MS Data Visualization, Parsons School of Design</label>
-</footer>
 </html>
