--- a/project02/index.html
+++ b/project02/index.html
@@ -14,15 +14,18 @@
     <div class="content-wrapper"> <!-- New wrapper for content -->
         <header>
             <div class="title-gif">
-                <img src="assets/women.gif" class="img-gif">
-                <img src="assets/women.gif" class="img-gif">
-                <img src="assets/women.gif" class="img-gif">
+                <img src="/assets/women.gif">
+                <img src="/assets/women.gif">
+                <img src="/assets/women.gif">
             </div>
 
+    
+    
             <div class="title">
-                <h1>Gender role trends of the sitters in NPG</h1>
-                <p>Explore the roles of the sitters featured in the Smithsonian National Portrait Gallery,
-                    categorized by gender over time. It draws from a dataset of 14,490 documents.</p>
+    <h1>Framing Gender</h1>
+    <h2>Why These Sitters Are Remembered in the National Portrait Gallery</h2>
+    <p>Explore the “careers” of the sitters featured in the Smithsonian National Portrait Gallery,
+        categorized by gender over time. It draws from a dataset of 14,490 documents.</p>
         <p>↓</p>
             </div>
 
