--- a/project02/index.html
+++ b/project02/index.html
@@ -14,9 +14,9 @@
     <div class="content-wrapper"> <!-- New wrapper for content -->
         <header>
             <div class="title-gif">
-                <img src="/assets/women.gif" class="img-gif" >
-                <img src="/assets/women.gif" class="img-gif">
-                <img src="/assets/women.gif" class="img-gif">
+                <img src="assets/women.gif" class="img-gif" >
+                <img src="assets/women.gif" class="img-gif">
+                <img src="assets/women.gif" class="img-gif">
             </div>
 
     
@@ -39,11 +39,6 @@
     <div id="filter"></div>
         <div id="chart"></div>
     </div>
-    
-    <footer>
-        <label>2024 © Monsicha Srisuantang & Harshita Chakravadhanula</label>
-        <label>Major Studio 1 Fall 24 | MS Data Visualization, Parsons School of Design</label>
-    </footer>
 </body>
 
 <footer>
