timeline working and normalised

--- a/project02/index.html
+++ b/project02/index.html
@@ -41,6 +41,7 @@
             <div id="women-treemap"></div>
             <div id="men-treemap"></div>
         </div>
+        <div id="timeline"></div>
     </div>
     
 
