add men data and hover

--- a/project02/index.html
+++ b/project02/index.html
@@ -37,7 +37,10 @@
         </header>
         
     <div id="filter"></div>
-        <div id="chart"></div>
+        <div id="chart">
+            <div id="women-treemap"></div>
+            <div id="men-treemap"></div>
+        </div>
     </div>
     
 
