--- a/project02/index.html
+++ b/project02/index.html
@@ -38,8 +38,8 @@
         
     <div id="filter"></div>
         <div id="chart">
-            <div id="women-treemap"></div>
-            <div id="men-treemap"></div>
+            <div id="treemap-0"></div>
+            <div id="treemap-0"></div>
         </div>
     </div>
     
