--- a/project02/index.html
+++ b/project02/index.html
@@ -47,6 +47,8 @@
         <div id="chart">
             <div id="treemap-0"></div>
             <div id="treemap-1"></div>
+            <div id="timeline"></div>
+            <div id="people-thumbnails"></div>
         </div>
     </div>
     
