--- a/project02/index.html
+++ b/project02/index.html
@@ -13,9 +13,9 @@
 <body>
     <header>
         <div class="title-gif">
-            <img src="assets/women.gif" class="img-gif" >
-            <img src="assets/women.gif" class="img-gif">
-            <img src="assets/women.gif" class="img-gif">
+            <img src="assets/women1.gif" class="img-gif" >
+            <img src="assets/women2.gif" class="img-gif">
+            <img src="assets/women3.gif" class="img-gif">
         </div>
 
         <div class="title">
@@ -27,9 +27,9 @@
         </div>
 
         <div class="title-gif">
-            <img src="assets/men.gif" class="img-gif">
-            <img src="assets/men.gif" class="img-gif">
-            <img src="assets/men.gif" class="img-gif">
+            <img src="assets/men1.gif" class="img-gif">
+            <img src="assets/men2.gif" class="img-gif">
+            <img src="assets/men3.gif" class="img-gif">
         </div>
     </header>
         
