add button (still not working)

--- a/project02/index.html
+++ b/project02/index.html
@@ -43,11 +43,11 @@
             Here is a look the proportion and count by topic and career over time.</p>
     </section>
 
-    <div id="filter"></div>
-        <div id="chart">
-            <div id="treemap-0"></div>
-            <div id="treemap-1"></div> 
-        </div>
+    <button id="backButton">Back</button>
+    <div id="chart">
+        <div id="treemap-0"></div>
+        <div id="treemap-1"></div> 
+    </div>
    <div id="timeline"></div>
    <div id="people-thumbnails"></div>
 
