--- a/project02/index.html
+++ b/project02/index.html
@@ -43,7 +43,9 @@
             Here is a look the proportion and count by topic and career over time.</p>
     </section>
 
-    <button id="backButton">Back</button>
+    <div id="buttonContainer">
+        <button id="backButton">Back</button>
+    </div>
     <div id="chart">
         <div id="treemap-0"></div>
         <div id="treemap-1"></div> 
