--- a/project02/index.html
+++ b/project02/index.html
@@ -44,14 +44,16 @@
     </section>
 
     <div id="buttonContainer">
-        <button id="backButton">Back</button>
+        <button id="backButton"></button>
     </div>
+    
     <div id="chart">
         <div id="treemap-0"></div>
         <div id="treemap-1"></div> 
     </div>
-   <div id="timeline"></div>
-   <div id="people-thumbnails"></div>
+    <p>☞ Click to see the details ☜</p>
+    <div id="timeline"></div>
+    <div id="people-thumbnails"></div>
 
 
 </body>
