--- a/project02/index.html
+++ b/project02/index.html
@@ -55,6 +55,16 @@
     <div id="timeline"></div>
     <div id="people-thumbnails"></div>
 
+    <section id="outro">
+        <p>While the insights here may not be particularly surprising, as per the <a href="https://www.dol.gov/">U.S. Department of Labor</a>, as of September 2024, 58% of women are a part of the workforce, whereas 68%  of their male counterparts are. This indicates a marked difference from the visualised data, but within this change, we’d like to ask whether gender roles really are the thing of the past, or whether there are hints of the present in this dataset that we have visualised.</p>
+
+            <p>In this dataset dated between x and y, men clearly take the cake in military and politics while women, those who did work, seemed focussed on arts and social welfare.</p>
+            
+            <p>Has this changed today? Are all industries equally inviting for women? For the ones which are, are they valued by society in equal terms as the male-dominated ones?</p>
+            
+            <p>If not, why?</p>
+    </section>
+
 
 </body>
 
