try sticky head

--- a/project02/index.html
+++ b/project02/index.html
@@ -43,9 +43,11 @@
             Here is a look the proportion and count by topic and career over time.</p>
     </section>
 
+    <section id="main">
     <div id="buttonContainer">
         <button id="backButton"></button>
     </div>
+
     
     <div id="chart">
         <div id="treemap-0"></div>
@@ -54,6 +56,8 @@
     <p>☞ Click to see the details ☜</p>
     <div id="timeline"></div>
     <div id="people-thumbnails"></div>
+    </section>
+   
 
     <section id="outro">
         <p>While the insights here may not be particularly surprising, as per the <a href="https://www.dol.gov/">U.S. Department of Labor</a>, as of September 2024, 58% of women are a part of the workforce, whereas 68%  of their male counterparts are. This indicates a marked difference from the visualised data, but within this change, we’d like to ask whether gender roles really are the thing of the past, or whether there are hints of the present in this dataset that we have visualised.</p>
