almost fixed gris

--- a/project02/index.html
+++ b/project02/index.html
@@ -56,7 +56,9 @@
    
 
     <div id="timeline"></div>
-    <div id="people-thumbnails"></div>
+    <div id="people-thumbnails" style="display: flex;">
+        <div id="women-thumbnails"></div>
+        <div id="men-thumbnails"></div>
 
 </section>
 
