pop up complete

--- a/project02/index.html
+++ b/project02/index.html
@@ -59,6 +59,20 @@
     <div id="people-thumbnails" style="display: flex;">
         <div id="women-thumbnails"></div>
         <div id="men-thumbnails"></div>
+    </div>
+    <!-- Modal Structure -->
+<div id="modal" style="display: none;">
+    <div id="modal-content">
+        <span id="close-modal" style="cursor: pointer;">&times;</span>
+        <img id="modal-image" src="" alt="" style="width: 100%; max-width: 500px;">
+        <h2 id="modal-name"></h2>
+        <h3 id="modal1"></h3>
+        <h3 id="modal2"></h3>
+        <h3 id="modal3"></h3>
+        <h3 id="modal4"></h3>
+    </div>
+</div>
+
 
 </section>
 
