fix space between women row

--- a/project02/index.html
+++ b/project02/index.html
@@ -64,7 +64,7 @@
         </div>
 
         <div id="timeline"></div>
-        <div id="people-thumbnails" style="display: flex;">
+        <div id="people-thumbnails">
             <div id="women-thumbnails"></div>
             <div id="men-thumbnails"></div>
         </div>
