--- a/project02/index.html
+++ b/project02/index.html
@@ -72,13 +72,15 @@
         <!-- Modal Structure -->
         <div id="modal" style="display: none;">
             <div id="modal-content">
-                <span id="close-modal" style="cursor: pointer;">&times;</span>
-                <img id="modal-image" src="" alt="" style="width: 100%; max-width: 500px;">
-                <h2 id="modal-name"></h2>
-                <h3 id="modal1"></h3>
-                <h3 id="modal2"></h3>
-                <h3 id="modal3"></h3>
-                <h3 id="modal4"></h3>
+                <img id="modal-image">
+                <div class="modal-text">
+                    <h2 id="modal-name"></h2>
+                    <h3 id="modal1"></h3>
+                    <h3 id="modal2"></h3>
+                    <h3 id="modal3"></h3>
+                    <h3 id="modal4"></h3>
+                </div>
+                <span id="close-modal">&times;</span>
             </div>
         </div>
     </section>
