--- a/project02/index.html
+++ b/project02/index.html
@@ -54,7 +54,7 @@
 
     <section id="main">
         <p>☞ Click to see the details ☜</p>
-        <div id="buttonContainer">
+        <div id="button-container">
             <button id="backButton"></button>
         </div>
      
@@ -74,11 +74,12 @@
             <div id="modal-content">
                 <img id="modal-image">
                 <div class="modal-text">
+                    
                     <h2 id="modal-name"></h2>
-                    <h3 id="modal1"></h3>
-                    <h3 id="modal2"></h3>
-                    <h3 id="modal3"></h3>
-                    <h3 id="modal4"></h3>
+                    <h3 id="modal-role"></h3>
+                    <h3 id="modal-realm"></h3>
+                    <h3 id="modal-decade"></h3>
+                    <h3 id="modal-link"></h3>
                 </div>
                 <span id="close-modal">&times;</span>
             </div>
