hide click guide when clicked treemap

--- a/project02/index.html
+++ b/project02/index.html
@@ -53,7 +53,7 @@
     </section>
 
     <section id="main">
-        <p>☞ Click to see the details ☜</p>
+        <p id="click-guide">☞ Click to see the details ☜</p>
         <div id="button-container">
             <button id="backButton"></button>
         </div>
