--- a/project02/index.html
+++ b/project02/index.html
@@ -59,6 +59,7 @@
         <div id="women-thumbnails"></div>
         <div id="men-thumbnails"></div>
     </div>
+    <div id="hover-info" style="margin-top: 10px; font-size: 16px; font-weight: bold;"></div>
     <!-- Modal Structure -->
 <div id="modal" style="display: none;">
     <div id="modal-content">
