--- a/project02/index.html
+++ b/project02/index.html
@@ -62,6 +62,9 @@
             <div id="treemap-0"></div>
             <div id="treemap-1"></div> 
         </div>
+        <div id="display-info">
+        </div>
+        
 
         <div id="timeline"></div>
         <div id="people-thumbnails">
@@ -69,7 +72,6 @@
             <div id="men-thumbnails"></div>
         </div>
 
-        <!-- Modal Structure -->
         <div id="modal" style="display: none;">
             <div id="modal-content">
                 <img id="modal-image">
