--- a/project02/index.html
+++ b/project02/index.html
@@ -78,8 +78,8 @@
                 <img id="modal-image">
                 <div class="modal-text">
                     
-                    <h2 id="modal-name"></h2>
-                    <h5id="modal-role"></h5>
+                    <h2 id="modal-name" class = "modal-name"> </h2>
+                    <h5 id="modal-role"></h5>
                     <h5 id="modal-realm"></h5>
                     <h5 id="modal-decade"></h5>
                     <h5 id="modal-link"></h5>
@@ -93,8 +93,8 @@
     <section id="outro">
         <p>While the insights here may not be particularly surprising, as per the <a href="https://www.dol.gov/">U.S. Department of Labor</a>, as of September 2024, 58% of women are a part of the workforce, whereas 68% of their male counterparts are. This indicates a marked difference from the visualized data, but within this change, we’d like to ask whether gender roles really are a thing of the past, or if there are hints of the present in this dataset we have visualized.</p>
 
-        <p>In this dataset dated between x and y, men clearly take the cake in military and politics while women, those who did work, seemed focused on arts and social welfare.</p>
-
+        <p>In this dataset, men clearly take the cake in military and politics while women, those who did work, seemed focused on arts and social welfare.</p>
+<!-- dated between x and y -->
         <p>Has this changed today? Are all industries equally inviting for women? For the ones which are, are they valued by society in equal terms as the male-dominated ones?</p>
 
         <p>If not, why?</p>
