--- a/project03/index.html
+++ b/project03/index.html
@@ -11,6 +11,11 @@
     <script src="main.js"></script>
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <footer>
+        <label>2024 © Monsicha Srisuantang | MS Data Visualization, Parsons School of Design</label>
+    </footer>
 </body>
 </html>
