--- a/project03/index.html
+++ b/project03/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Greeting Cards</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.png">
-    <link rel="stylesheet" href="https://use.typekit.net/lcn3jpe.css">
+    <link rel="stylesheet" href="https://use.typekit.net/had3kgg.css">
     <link rel="stylesheet" href="styles.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="main.js"></script>
 </head>
 <body>
     <header>
-
+        <h1>The Greeting Cards</h1>
     </header>
     <footer>
         <label>2024 © Monsicha Srisuantang | MS Data Visualization, Parsons School of Design</label>
