--- a/project03/index.html
+++ b/project03/index.html
@@ -8,12 +8,43 @@
     <link rel="stylesheet" href="https://use.typekit.net/had3kgg.css">
     <link rel="stylesheet" href="styles.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="main.js"></script>
+    
 </head>
 <body>
-    <header>
-        <h1>The Greeting Cards</h1>
-    </header>
+    <script src="main.js"></script>
+    <script src="./scrollama.min.js"></script>
+    <main>
+        <section id="intro">
+            <!-- <img src="assets/CH_logo.png" alt="Cooper Hewitt"> -->
+            <div id="card">
+            <header>
+                <h1>The Greeting Cards</h1>
+            </header>
+            <div>
+        </section>
+        <section id="scrolly">
+            <figure>
+                <p>TEST</p>
+            </figure>
+
+            <article>
+                <div class="step" data-step="1" style="padding: 190px 0px;" data-scrollama-index="0">
+					<p>STEP 1</p>
+				</div>
+				<div class="step" data-step="2" style="padding: 105px 0px;" data-scrollama-index="1">
+					<p>STEP 2</p>
+				</div>
+				<div class="step" data-step="3" style="padding: 121px 0px;" data-scrollama-index="2">
+					<p>STEP 3</p>
+				</div>
+				<div class="step" data-step="4" style="padding: 211px 0px;" data-scrollama-index="3">
+					<p>STEP 4</p>
+				</div>
+            </article>
+        </section>
+
+    </main>
+
     <footer>
         <label>2024 © Monsicha Srisuantang | MS Data Visualization, Parsons School of Design</label>
     </footer>
