--- a/project03/index.html
+++ b/project03/index.html
@@ -24,12 +24,13 @@
         </section>
         <section id="scrolly">
             <figure>
-                <p>TEST</p>
             </figure>
 
             <article>
                 <div class="step" data-step="1" style="padding: 190px 0px;" data-scrollama-index="0">
-					<p>STEP 1</p>
+					<p>Most of us have received or sent a greeting card, keeping some as treasured mementos. But have you ever wondered about the greeting cards collected by design museum, like the Cooper Hewitt, Smithsonian?
+
+                    This project explores their collection from <b>577 greeting cards</b>, uncovering the design elements that make these cards memorable.</p>
 				</div>
 				<div class="step" data-step="2" style="padding: 105px 0px;" data-scrollama-index="1">
 					<p>STEP 2</p>
