grouped by occassion

--- a/project03/index.html
+++ b/project03/index.html
@@ -13,6 +13,7 @@
 <body>
     <script src="main.js"></script>
     <script src="./scrollama.min.js"></script>
+    <script src="vibrant.js"></script>
     <main>
         <section id="intro">
             <!-- <img src="assets/CH_logo.png" alt="Cooper Hewitt"> -->
@@ -43,6 +44,7 @@
 				</div>
             </article>
         </section>
+        <section id="chart"></section>
 
     </main>
 
