group occasion and elements

--- a/project03/index.html
+++ b/project03/index.html
@@ -44,7 +44,25 @@
 				</div>
             </article>
         </section>
-        <section id="chart"></section>
+        <section id="chart">
+            <h2>Occasion</h2>
+        </section>
+        <section id="result">
+            <h2>Results Cards</h2>
+        </section>
+        <section id="outro">
+            <div id="card">
+            <p>Thank you</p>
+            <h3><u>Methodology</u></h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+            <div>
+            <button>Back to top</button>
+        <script>
+            document.querySelector('button').addEventListener('click', function() {
+                document.getElementById('intro').scrollIntoView({ behavior: 'smooth' });
+            });
+        </script>
+        </section>
 
     </main>
 
