--- a/lab10_ui_frameworks/02_bootstrap_carousel/index.html
+++ b/lab10_ui_frameworks/02_bootstrap_carousel/index.html
@@ -23,6 +23,7 @@
             <!-- Page content goes here -->
             <!-- <img src="..." class="d-block w-100" alt="..."> -->
             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"></rect></svg>
+            <img src ="sample1.jpg">
             <div class="carousel-caption d-none d-md-block">
               <h5>Switching context</h5>
               <p>Default view.</p>
@@ -32,6 +33,7 @@
             <!-- Page content goes here -->
             <!-- <img src="..." class="d-block w-100" alt="..."> -->
             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"></rect></svg>
+            <img src ="sample2.jpg">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p>Some representative placeholder content for the second analysis.</p>
@@ -41,6 +43,7 @@
             <!-- Page content goes here -->
             <!-- <img src="..." class="d-block w-100" alt="..."> -->
             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"></rect></svg>
+            <img src ="sample3.jpg">
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the third analysis.</p>
