--- a/project03/index.html
+++ b/project03/index.html
@@ -24,28 +24,22 @@
             <div>
         </section>
         <section id="scrolly">
-            <figure>
-            </figure>
-
+            <figure id="chart"></figure>
             <article>
-                <div class="step" data-step="1" style="padding: 190px 0px;" data-scrollama-index="0">
-					<p>Most of us have received or sent a greeting card, keeping some as treasured mementos. But have you ever wondered about the greeting cards collected by design museum, like the Cooper Hewitt, Smithsonian?
-
-                    This project explores their collection from <b>577 greeting cards</b>, uncovering the design elements that make these cards memorable.</p>
+                <div class="step" data-step="1" data-scrollama-index="0">
+					<p>Most of us have received or sent a greeting card, keeping some as treasured mementos. But have you ever wondered about the greeting cards collected by design museum, like the Cooper Hewitt, Smithsonian?</p>
 				</div>
-				<div class="step" data-step="2" style="padding: 105px 0px;" data-scrollama-index="1">
-					<p>STEP 2</p>
+				<div class="step" data-step="2" data-scrollama-index="1">
+					<p>This project explores their collection from <b>577 greeting cards</b>,
+                        uncovering the design elements that make these cards memorable.</p>
 				</div>
-				<div class="step" data-step="3" style="padding: 121px 0px;" data-scrollama-index="2">
+				<div class="step" data-step="3" data-scrollama-index="2">
 					<p>STEP 3</p>
 				</div>
-				<div class="step" data-step="4" style="padding: 211px 0px;" data-scrollama-index="3">
+				<div class="step" data-step="4" data-scrollama-index="3">
 					<p>STEP 4</p>
 				</div>
             </article>
-        </section>
-        <section id="chart">
-            <h2>Occasion</h2>
         </section>
         <section id="result">
             <h2>Results Cards</h2>
@@ -57,14 +51,16 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
             <div>
             <button>Back to top</button>
-        <script>
-            document.querySelector('button').addEventListener('click', function() {
-                document.getElementById('intro').scrollIntoView({ behavior: 'smooth' });
-            });
-        </script>
+            <script>
+                document.querySelector('button').addEventListener('click', function() {
+                    document.getElementById('intro').scrollIntoView({ behavior: 'smooth' });
+                });
+            </script>
         </section>
 
     </main>
+
+    
 
     <footer>
         <label>2024 © Monsicha Srisuantang | MS Data Visualization, Parsons School of Design</label>
