add scrollama to trigger the data

--- a/project03/index.html
+++ b/project03/index.html
@@ -39,6 +39,9 @@
 				<div class="step" data-step="4" data-scrollama-index="3">
 					<p>STEP 4</p>
 				</div>
+                <div class="step" data-step="5" data-scrollama-index="4">
+					<p>STEP 5</p>
+				</div>
             </article>
         </section>
         <section id="result">
