--- a/project03/index.html
+++ b/project03/index.html
@@ -27,20 +27,21 @@
             <figure id="chart"></figure>
             <article>
                 <div class="step" data-step="1" data-scrollama-index="0">
-					<p>Most of us have received or sent a greeting card, keeping some as treasured mementos. But have you ever wondered about the greeting cards collected by design museum, like the Cooper Hewitt, Smithsonian?</p>
+					<p>Most of us have received or sent a greeting card, keeping some as treasured mementos. But have you ever wondered about the greeting cards collected by design museum, like the Cooper Hewitt, Smithsonian?<br>
+                    This project explores their collection from <b>577 greeting cards</b>,
+                    uncovering the design elements that make these cards memorable.</p>
 				</div>
 				<div class="step" data-step="2" data-scrollama-index="1">
-					<p>This project explores their collection from <b>577 greeting cards</b>,
-                        uncovering the design elements that make these cards memorable.</p>
+					<p>Group by ocassion</p>
 				</div>
 				<div class="step" data-step="3" data-scrollama-index="2">
-					<p>STEP 3</p>
+					<p>Group by elements</p>
 				</div>
 				<div class="step" data-step="4" data-scrollama-index="3">
-					<p>STEP 4</p>
+					<p>Group by colors</p>
 				</div>
                 <div class="step" data-step="5" data-scrollama-index="4">
-					<p>STEP 5</p>
+					<p>All combination</p>
 				</div>
             </article>
         </section>
