--- a/project03/index.html
+++ b/project03/index.html
@@ -24,7 +24,7 @@
             <div>
         </section>
         <section id="scrolly">
-            <figure id="chart"></figure>
+            <figure></figure>
             <article>
                 <div class="step" data-step="1" data-scrollama-index="0">
 					<p>Most of us have received or sent a greeting card, keeping some as treasured mementos. But have you ever wondered about the greeting cards collected by design museum, like the Cooper Hewitt, Smithsonian?<br>
