--- a/project03/index.html
+++ b/project03/index.html
@@ -16,12 +16,12 @@
     <script src="library/vibrant.js"></script>
     <main>
         <section id="intro">
-            <!-- <img src="assets/CH_logo.png" alt="Cooper Hewitt"> -->
+            <img src="assets/cooper-hewitt-logo.webp" width="80px" alt="Cooper Hewitt">
             <div id="card">
-            <header>
+                <header>
                 <h1>The Greeting Cards</h1>
-            </header>
-            <div>
+                </header>
+            </div>
         </section>
         <section id="scrolly">
             <figure></figure>
@@ -47,6 +47,8 @@
         </section>
         <section id="result">
             <h2>Results Cards</h2>
+            <p>Here are the cards that match your selection</p>
+            <img id="envelope" src="assets/envelope.svg" />
         </section>
         <section id="outro">
             <div id="card">
