--- a/project03/index.html
+++ b/project03/index.html
@@ -32,18 +32,22 @@
                     uncovering the design elements that make these cards memorable.</p>
 				</div>
 				<div class="step" data-step="2" data-scrollama-index="1">
-					<p>Group by ocassion</p>
+					<p>We usually send the card by ocassion, some occasion are more popular than the other. Most of the cards in this collection was gave as a gift to the museum from people like you. Let's see the most popular ocassion</p>
 				</div>
                 <div class="step" data-step="3" data-scrollama-index="2">
-					<p>Group by colors</p>
+					<p>Each occasion have variety of elements and color inside that represent. If we look into the vibrant color from each cards some pallete are more popular than other. Warm tone take the most part of it and only few are blue.</p>
 				</div>
 				<div class="step" data-step="4" data-scrollama-index="3">
-					<p>Group by elements</p>
+					<p>When come to the elements. They are not variety as color, some of them are using over and over. It can group into the 10 categories. The most part is easy to understand visual not abstract and most of them do not have text on the card cover just represent by the visual only</p>
 				</div>
                 <div class="step" data-step="5" data-scrollama-index="4">
-					<p>All combination</p>
+					<p>The combination of color and element in each occasion are also slightly different. Nuture are not really green. Geometric is the most vibrant and colorful</p>
 				</div>
             </article>
+        </section>
+        <section id="filter">
+            <h2>Yours Cards</h2>
+            <p>What about yours? Are some greeting card in the collection are your favorite, Select the choice to see the result that match yours</p>
         </section>
         <section id="result">
             <h2>Results Cards</h2>
@@ -54,7 +58,7 @@
             <div id="card">
             <p>Thank you</p>
             <h3><u>Methodology</u></h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+            <p>The data of greeting cards in this project is from Cooper Hewitt Smithsonian, Design Museum API, categorized by the title, description text, or text that appear on the cards manually. For the colors using Vibrant.js, so some of them are not totally accurated.</p>
             <div>
             <button>Back to top</button>
             <script>
