add scaleUpCard when click on occassion

--- a/project03/index.html
+++ b/project03/index.html
@@ -41,7 +41,7 @@
 					<p>When come to the elements. They are not variety as color, some of them are using over and over. It can group into the 10 categories. The most part is easy to understand visual not abstract and most of them do not have text on the card cover just represent by the visual only</p>
 				</div>
                 <div class="step" data-step="5" data-scrollama-index="4">
-					<p>The combination of color and element in each occasion are also slightly different. Nuture are not really green. Geometric is the most vibrant and colorful</p>
+					<p>The combination of color and element in each occasion are also slightly different. Nuture are not really green. Geometric is the most vibrant and colorful (...)</p>
 				</div>
             </article>
         </section>
