add filter buttons

--- a/project03/index.html
+++ b/project03/index.html
@@ -45,15 +45,19 @@
 				</div>
             </article>
         </section>
-        <section id="filter">
+        <section id="summary">
             <h2>Yours Cards</h2>
             <p>What about yours? Are some greeting card in the collection are your favorite, Select the choice to see the result that match yours</p>
+            <div id="occasion-filter"></div>
+            <div id="element-filter"></div>
+            <div id="result"></div>
+            <img id="envelope" src="assets/envelope.svg" />
         </section>
-        <section id="result">
+        <!-- <section id="result">
             <h2>Results Cards</h2>
             <p>Here are the cards that match your selection</p>
             <img id="envelope" src="assets/envelope.svg" />
-        </section>
+        </section> -->
         <section id="outro">
             <div id="card">
             <p>Thank you</p>
