--- a/project03/index.html
+++ b/project03/index.html
@@ -50,6 +50,8 @@
             <p>What about yours? Are some greeting card in the collection are your favorite, Select the choice to see the result that match yours</p>
             <div id="occasion-filter"></div>
             <div id="element-filter"></div>
+            <div id="color-filter"></div>
+            
             <div id="result"></div>
             <img id="envelope" src="assets/envelope.svg" />
         </section>
