--- a/project03/index.html
+++ b/project03/index.html
@@ -48,18 +48,16 @@
         <section id="summary">
             <h2>Yours Cards</h2>
             <p>What about yours? Are some greeting card in the collection are your favorite, Select the choice to see the result that match yours</p>
-            <div id="occasion-filter"></div>
-            <div id="element-filter"></div>
-            <div id="color-filter"></div>
-            
+            <div id="filter">
+                <div id="occasion-filter"></div>
+                <div id="element-filter"></div>
+                <div id="color-filter"></div>
+                <div id="reset"></div>
+            </div>
+
             <div id="result"></div>
             <img id="envelope" src="assets/envelope.svg" />
         </section>
-        <!-- <section id="result">
-            <h2>Results Cards</h2>
-            <p>Here are the cards that match your selection</p>
-            <img id="envelope" src="assets/envelope.svg" />
-        </section> -->
         <section id="outro">
             <div id="card">
             <p>Thank you</p>
